(lang dune 3.7)

(name marching_squares)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Amaury Mazoyer")

(maintainers "Amaury Mazoyer")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name marching_squares)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
